fix overflow

--- a/src/components/PostFeed/index.module.css
+++ b/src/components/PostFeed/index.module.css
@@ -32,6 +32,7 @@
   padding-left: 10px;
   flex-basis: 0px;
   flex-grow: 1;
+  min-width: 0;
 }
 
 .itemContent {
